--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "hero_admin_panel",
   "version": "0.1.0",
+  "homepage": "https://artem-shadrin.github.io/udemy-hero-admin-panel",
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^1.5.1",
@@ -13,7 +14,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.3",
-    "react-scripts": "4.0.3",
+    "react-scripts": "5.0.1",
     "react-transition-group": "^4.4.2",
     "redux-thunk": "^2.4.0",
     "reselect": "^4.1.2",
@@ -24,7 +25,9 @@
     "start": "concurrently \"react-scripts start\" \"npx json-server heroes.json --port 3001\"",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -42,6 +45,7 @@
     ]
   },
   "devDependencies": {
-    "classnames": "^2.3.1"
+    "classnames": "^2.3.1",
+    "gh-pages": "^6.0.0"
   }
 }
